# shruggery_mcp

./: .env.example  .gitignore  README.md  pyproject.toml  run_mcp.sh
src/shruggery/: __init__.py  __main__.py  client.py  config.py  models.py  server.py
src/shruggery/tools/: __init__.py  confluence_attachments.py  confluence_comments.py  confluence_labels.py  confluence_pages.py  confluence_properties.py  confluence_search.py  confluence_spaces.py  confluence_templates.py  jira_attachments.py  jira_boards.py  jira_comments.py  jira_fields.py  jira_filters.py  jira_issues.py  jira_links.py  jira_projects.py  jira_search.py  jira_users.py  jira_watchers.py  jira_workflows.py  jira_worklogs.py
src/shruggery/utils/: __init__.py  formatting.py  pagination.py
tests/: test_download_paths.py  test_smoke.py
